--- a/mod2 solution/css/style.css
+++ b/mod2 solution/css/style.css
@@ -10,18 +10,22 @@ p {
 	border: 1px solid black;
 	background-color: #A52A2A;
 	width: 90%;
-	height: 200px;
+	height: 100px;
 	margin-right: auto;
 	margin-left: auto;
 	font-family: Helvetica;
 	color: white;
   }
 
+.row {
+	width: 100%;
+}
+
 
 @media (min-width: 992px){
 	.col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4,
 	.col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8,
-	.col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12, {
+	.col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
 	
 	float: left;
 	border: 1px solid green;
@@ -38,6 +42,7 @@ p {
 	}
 	.col-lg-4{
 		width: 33%;
+
 	}
 	.col-lg-5{
 		width: 41.66%;
@@ -69,7 +74,7 @@ p {
 @media( min-width: 768px) and (max-width: 991px){
 	.col-md-1, .col-md-2, .col-md-3, .col-md-4,
 	.col-md-5, .col-md-6, .col-md-7, .col-md-8,
-	.col-md-9, .col-md-10, .col-md-11, .col-md-12,
+	.col-md-9, .col-md-10, .col-md-11, .col-md-12
 	{
 		float: left;
 		border: 1px solid green;
@@ -110,9 +115,8 @@ p {
 	}
 	.col-md-12{
 		width: 100%;
+
 	}
 
-.row {
-	width: 100%;
-}
+
 }
